# watcher

./: Cargo.toml  Dockerfile  README.md  start.sh
backend/: index.html  main.py  requirements.txt
src/: main.rs
watcher/: Cargo.toml
watcher/src/: main.rs
