[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"]}
tokio = { version = "1", features = ["full"] }
aes = "0.7.5"
block-modes = "0.8.1"
litcrypt = { git = "https://github.com/anvie/litcrypt.rs", rev = "2f3c75e" }